tests/snapshots/run_wpt_conformance__litert_linear_float16_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
linear.https.any.js linear float16 0D tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Linear { input: 0, options: Some(MLLinearOptions { label: "", alpha: 1.0, beta: 0.0 }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    linearInput: f16[];
  }

  nodes {
    [linearOutput] = linear(linearInput, alpha=1.0, beta=0.0, label="");
  }

  outputs { linearOutput; }
}
